[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/perks/items_0008_superpower.png" type="Texture" id=2]
[ext_resource path="res://assets/perks/items_0007_slow_enemies.png" type="Texture" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="clip_count" type="Label" parent="."]
margin_left = 695.0
margin_top = 543.0
margin_right = 715.0
margin_bottom = 558.0
rect_scale = Vector2( 3, 3 )
text = "10"

[node name="level_count" type="Label" parent="."]
margin_left = 24.0
margin_top = 29.0
margin_right = 64.0
margin_bottom = 44.0
rect_scale = Vector2( 3, 3 )
text = "1"

[node name="CLIP_SIZE" type="Label" parent="."]
margin_left = 774.0
margin_top = 543.0
margin_right = 794.0
margin_bottom = 558.0
rect_scale = Vector2( 3, 3 )
text = "10"

[node name="dash" type="Label" parent="."]
margin_left = 755.0
margin_top = 543.0
margin_right = 764.0
margin_bottom = 558.0
rect_scale = Vector2( 3, 3 )
text = "/"

[node name="ammo" type="Label" parent="."]
margin_left = 889.0
margin_top = 543.0
margin_right = 909.0
margin_bottom = 558.0
rect_scale = Vector2( 3, 3 )
text = "10"

[node name="ZombiesLeftToSpawn" type="Label" parent="."]
margin_left = 824.0
margin_top = 7.0
margin_right = 969.0
margin_bottom = 22.0
text = "Zombies Left to Spawn"

[node name="ZombiesOnMap" type="Label" parent="."]
margin_left = 824.0
margin_top = 29.0
margin_right = 940.0
margin_bottom = 44.0
text = "Zombies on map"

[node name="zombies_on_map" type="Label" parent="."]
margin_left = 981.0
margin_top = 29.0
margin_right = 1061.0
margin_bottom = 44.0
text = "0"

[node name="zombies_left_to_spawn" type="Label" parent="."]
margin_left = 981.0
margin_top = 7.0
margin_right = 1061.0
margin_bottom = 22.0
text = "0"

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = 24.0
margin_top = 7.0
margin_right = 619.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
value = 50.0
percent_visible = false

[node name="money" type="Label" parent="."]
margin_left = 50.0
margin_top = 543.0
margin_right = 151.0
margin_bottom = 591.0
rect_scale = Vector2( 3, 3 )
text = "0
"

[node name="$" type="Label" parent="."]
margin_left = 9.0
margin_top = 543.0
margin_right = 49.0
margin_bottom = 557.0
rect_scale = Vector2( 3, 3 )
text = "$"

[node name="current_gun" type="Label" parent="."]
margin_left = 704.0
margin_top = 512.0
margin_right = 779.0
margin_bottom = 526.0
rect_scale = Vector2( 1.3, 1.3 )
text = "current_gun"

[node name="other_gun" type="Label" parent="."]
margin_left = 864.0
margin_top = 512.0
margin_right = 939.0
margin_bottom = 526.0
rect_scale = Vector2( 1.3, 1.3 )
text = "empty
"

[node name="Grenades" type="Label" parent="."]
margin_left = 536.0
margin_top = 512.0
margin_right = 597.0
margin_bottom = 526.0
text = "Grenades"

[node name="grenade_count" type="Label" parent="Grenades"]
margin_left = 16.0
margin_top = 32.0
margin_right = 56.0
margin_bottom = 46.0
rect_scale = Vector2( 3, 3 )
text = "2"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.133
anchor_top = 0.907
anchor_right = 0.133
anchor_bottom = 0.907
margin_left = -0.192001
margin_top = -0.200012
margin_right = 359.808
margin_bottom = 39.8
alignment = 1

[node name="juggernaut" type="Sprite" parent="HBoxContainer"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="HBoxContainer"]
position = Vector2( 48, 0 )
scale = Vector2( 0.223776, 0.223776 )
texture = ExtResource( 3 )
